--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,14 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fzaninotto/faker": "^1.9",
         "symfony/maker-bundle": "^1.29"
     },
     "config": {
+        "platform": {
+            "php": "7.2"
+        },
         "preferred-install": {
             "*": "dist"
         },
