--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,13 @@
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/http-client": "4.4.*",
         "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/security-csrf": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.9",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
