--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^4.6.0"
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1"
     }
 }
